# weather_routing_pi

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Frontend2.00.md  Frontend2.md  Plugin.cmake  README  README-BUILD.md  README.md  Read-Build.md  VERSION.cmake  WeatherRouting.fbp  appveyor.yml  bld.bat  build-local-package-example.sh  run-circleci-local.txt  update_submodule_branch.sh  weather_routing_pi.kdev4
.circleci/: config.yml  config.yml.bak
.kdev4/: weather_routing_pi.kdev4
OLD/: CMakeLists.txt.bak  File-summary-revised.txt  File-summary-revised.txt.bak  fe2xcopy.bat  gitadd.bat
OLD/ci/: circleci-build-macos-new.sh  travis-build-raspbian-armhf-part1.sh  travis-build-raspbian-armhf-part2.sh
OLD/cmake/: FindGTK3.cmake
OLD/extinclude/: ODAPI.h
buildandroid/: build_android.cmake
buildosx/InstallOSX/: plugin.pkgproj.in  weather_routing_pi.pkgproj.in
buildwin/: NSIS.template.in  archive.lib  libeay32.lib  lzma.lib  portaudio_x86.lib  websockets.lib
buildwin/expat-2.2.5/: expat.lib
buildwin/gtk/: cairo.lib
buildwin/include/: lws_config.h
ci/: circleci-build-android-arm64.sh  circleci-build-android-arm64.sh.bak  circleci-build-android-armhf.sh  circleci-build-android-armhf.sh.bak  circleci-build-debian.sh  circleci-build-debian.sh.bak  circleci-build-flatpak.sh  circleci-build-flatpak.sh.bak  circleci-build-jammy.sh  circleci-build-macos-universal.sh  circleci-build-macos.sh  circleci-build-macos.sh.bak  circleci-build-mingw.sh  circleci-build-msvc.bat  circleci-build-msvc.bat.bak  circleci-build-raspbian-armhf.sh  circleci-build-trusty.sh  circleci-build-ubuntu-docker.sh  circleci-build-ubuntu-docker.sh.bak  circleci-upload.sh  cloudsmith-upload.sh  control  control-testplugin.bak  control-wxroute-old.bak  docker-build-fedora.sh  docker-build-flatpak.sh  opencpn-deps.spec  opencpn-fedora.spec  toolchain.cmake  travis-build-debian.sh  travis-build-fedora.sh  travis-build-flatpak.sh  travis-build-osx.sh  travis-build-raspbian-armhf-part1.sh  travis-build-raspbian-armhf-part2.sh  travis-build-raspbian-armhf.sh
ci/extras/: README.txt  build-ubuntu-x86_64-2204-jammy_extra_libs.txt  extra_libs.txt
cmake/: FindGTK3.cmake  FindTinyXML.cmake  MacosWxwidgets.cmake  NSIS.template.in  PluginConfigure.cmake  PluginConfigure.cmake.bak  PluginGL.cmake  PluginInstall.cmake  PluginInstall.cmake.bak  PluginJSON.cmake  PluginLocalization.cmake  PluginNMEA.cmake  PluginPackage.cmake  PluginSetup.cmake  PluginSetup.cmake.bak  PluginXML.cmake  TemplateVersion  android-aarch64-toolchain.cmake  android-armhf-toolchain.cmake  fix-macos-libs.sh  readme.txt  version.h.in  wxWTranslateCatalog.h.in
cmake/in-files/: PluginCPackOptions.cmake.in  appveyor-upload.sh.in  circleci-upload.sh.in  cloudsmith-upload.sh.in  flatpak_args.in  flatpak_extra_modules.in  flatpak_options.in  org.opencpn.OpenCPN.Plugin.yaml.in  pkg_version.sh.in  plugin.xml.in  readme.txt  version.h.in  wxWTranslateCatalog.h.in
data/: WeatherRoutingConfiguration.xml  WeatherRoutingInformation.html
data/boats/: Boat-Climatology.xml  Boat-Test-Power.xml  Boat-Test.xml  Boat.xml  SS-Boat-Climatology.xml  SS-Boat-Test-Power.xml
data/polars/: 60ftmono.pol  60ftmulti_1.pol  60ftmulti_2.pol  60ftmulti_3.pol  Alberg35.pol  Albin_Express.txt  Alden52.pol  BAVARIA_38_MATCH.txt  BENETEAU_44.7.txt  Beneteau375.pol  Beneteau421.pol  Beowulf78.pol  BlockIsland40.pol  Boat-C5.pol  Boat_OceanExpress.pol  BountyII.pol  COMFORTINA_38.txt  C_C34.pol  C_C372.pol  C_C402.pol  C_C44.pol  Cal2-46.pol  Cal239.pol  Cal36.pol  Cal40.pol  Catalina 22.txt  Catalina36.pol  Catalina36a.pol  Centurion47.pol  Cheoy_Lee44.pol  Colombia43.pol  Colombia50.pol  Contessa33.pol  Crealock34.pol  DEHLER_33.txt  DEHLER_36.txt  DEHLER_44.txt  DIVA_35.txt  DUFOUR_34.txt  Deerfoot62.pol  (+101 more)
debian/: changelog  control  copyright
extinclude/: ODJSONSchemas.h  ODSchema.json  ODSchema_defs.json
extsrc/json-schema-validator/: json-validator.cpp
flatpak/tinyxml/: 0001-Add-CMakeLists.txt.patch
include/: AboutDialog.h  Boat.h  BoatDialog.h  ConfigurationDialog.h  EditPolarDialog.h  LineBufferOverlay.h  PlotDialog.h  Polar.h  PolygonRegion.h  RouteMap.h  RouteMapOverlay.h  WeatherRouting.h  WeatherRoutingUI.h  icons.h  navobj_util.h  weather_routing_pi.h  zuFile.h
include/GL/: gl.h
libs/bzip2/: CMakeLists.txt
libs/curl/: CMakeLists.txt
libs/glshim/: CMakeLists.txt
libs/glu/: CMakeLists.txt
libs/json-schema-validator/: json-validator.cpp
libs/jsoncpp/: CMakeLists.txt
libs/libtess2/: CMakeLists.txt
libs/nmea0183/: CMakeLists.txt
libs/nmea0183/src/: mda.cpp  mda.hpp
libs/pluginDC/: CMakeLists.txt
libs/pluginDC/include/: pidc.h
libs/pluginDC/src/: TexFont.cpp  pidc.cpp  qtstylesheet.cpp
libs/plugingl/: CMakeLists.txt
libs/plugingl/include/: pidc.h
libs/plugingl/src/: pidc.cpp
libs/tinyxml/: CMakeLists.txt
libs/wxcurl/: CMakeLists.txt
manual/: antora.yml  site-all.yml  site.yml
manual/weather_routing/: site.yml
mingw/: readme.txt
msvc/: win_deps.bat
po/: POTFILES.in  POTFILES.in.test  aa_ER.po  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  (+22 more)
src/: .gitignore  AboutDialog.cpp  AboutDialog.h  Boat.cpp  Boat.h  BoatDialog.cpp  BoatDialog.h  BoatPlan.cpp  BoatPlan.h  BoatPlanDialog.cpp  BoatPlanDialog.h  BoatSpeed.cpp  BoatSpeed.h  ChargeSource.h  Configuration.cpp  ConfigurationBatchDialog.cpp  ConfigurationBatchDialog.h  ConfigurationDialog.cpp  ConfigurationDialog.h  EditPolarDialog.cpp  EditPolarDialog.h  FilterRoutesDialog.cpp  FilterRoutesDialog.h  GribRecord.cpp  GribRecord.h  LineBufferOverlay.cpp  LineBufferOverlay.h  ODAPI.h  PlotDialog.cpp  PlotDialog.h  Polar.cpp  Polar.h  PolygonRegion.cpp  PolygonRegion.h  ReportDialog.cpp  ReportDialog.h  RouteDialog.cpp  RouteDialog.h  RouteMap.cpp  RouteMap.h  (+53 more)
(+570 files in other folders)
